Perbaikan responsive dan gallery

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <title>Template Wedding 6</title>
   </head>
   <style>
+    .header {
+      height: 100%;
+    }
     .isi-pembuka {
       text-align: center;
       color: #394867;
