--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <style>
     .header {
-      height: 100%;
+      height: 100vh;
     }
     .isi-pembuka {
       text-align: center;
@@ -54,6 +54,11 @@
       bottom: 0;
       left: 0;
       transform: rotate(180deg);
+    }
+    @media (max-width: 575.98px) {
+      .header {
+        height: 100%;
+      }
     }
   </style>
   <body>
@@ -132,6 +137,7 @@
                   text-decoration: none;
                   color: #ffffff;
                   font-weight: bold;
+                  margin-bottom: 2rem;
                 "
               >
                 Buka Undangan
